@@ -13,7 +13,13 @@ namespace Sabre\VObject\Property;
  */
 class UtcOffset extends Text {
 
-    protected $delimiter = null;
+    /**
+     * In case this is a multi-value property. This string will be used as a
+     * delimiter.
+     *
+     * @var string|null
+     */
+    public $delimiter = null;
 
     /**
      * Returns the type of value.
